FIX: fixed the ai optimizer and the tour controller text